fix main menu flicker

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -42,6 +42,10 @@ $main-menu-shadow: 0px 1px 3px 0px rgba(0, 0, 0, .7);
   background-color: $transparent-black ;
 }
 
+.no-js .title-bar, .no-js #small-main-menu, .no-js #large-main-menu {
+  display: none;
+}
+
 #large-main-menu > .row > .columns {
   padding-left: 0px;
 }
